--- a/src/blocks/footer/_footer.scss
+++ b/src/blocks/footer/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    font-size: map-get($map: $font-size, $key: "sm");
+    font-size: map-get($map: $font-size, $key: "xs");
     padding: map-get($map: $spacers, $key: 4) 0;
 
     &__logo{
@@ -9,8 +9,14 @@
 
         fill: $white;
     }
-    &__offer{
-        // font-weight: $font-weight-bold;
+    &__nav{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: map-get($map: $spacers, $key: 1);
+
+        &_portfolio{
+            grid-template-columns: 1fr;
+        }
     }
     &__email{
         font-weight: $font-weight-bold;
@@ -30,13 +36,55 @@
         display: block;
         color: $grey;
 
-        line-height: $line-height-heading;
-        margin-bottom: map-get($map: $spacers, $key: 1);
+        line-height: $line-height-base;
     }
 }
 
+// < 1280px
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .footer{
+        &__service{
+            order: 1;
+
+            margin-bottom: map-get($map: $spacers, $key: 3);
+        }
+        &__info{
+            order: 2;
+            margin-bottom: map-get($map: $spacers, $key: 3);
+        }
+        &__portfolio{
+            order: 3;
+        }
+    }
+}
+// < 576px
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .footer{
         padding: map-get($map: $spacers, $key: 3) 0;
+
+        &__info{
+            order: 3;
+            margin-bottom: map-get($map: $spacers, $key: 0);
+        }
+        &__portfolio{
+            order: 2;
+            margin-bottom: map-get($map: $spacers, $key: 3);
+        }
+
+        &__nav{
+            grid-template-columns: repeat(2, 1fr);
+
+            &_portfolio{
+                grid-template-columns: 1fr;
+            }
+        }
+    }
+}
+// < 375px
+@media all and (max-width: map-get($grid-breakpoints, 'xxs')){
+    .footer{
+        &__nav{
+            grid-template-columns: 1fr;
+        }
     }
 }
