--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -33,8 +33,8 @@ header.header
                     path.header__nav-path(d="M372.939,180.455H12.03c-6.641,0-12.03,5.39-12.03,12.03s5.39,12.03,12.03,12.03h360.909c6.641,0,12.03-5.39,12.03-12.03    S379.58,180.455,372.939,180.455z")
                     path.header__nav-path(d="M372.939,264.667H132.333c-6.641,0-12.03,5.39-12.03,12.03c0,6.641,5.39,12.03,12.03,12.03h240.606    c6.641,0,12.03-5.39,12.03-12.03C384.97,270.056,379.58,264.667,372.939,264.667z")
 nav.navbar.navbar_header
-    .navbar_header__close#close-nav
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">path(fill-rule="evenodd" clip-rule="evenodd" d="M12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6Z" fill="currentColor"></path></svg>
+    svg.navbar_header__close#close-nav(width="24" height="24" viewBox="0 0 24 24" fill="none")
+        path(fill-rule="evenodd" clip-rule="evenodd" d="M12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6Z")
     .row
         .col-8.col-lg-7.col-md-12
             .navbar__title Основные услуги
