--- a/src/items/item/_item_service.scss
+++ b/src/items/item/_item_service.scss
@@ -16,6 +16,7 @@
         height: 100%;
     }
     &__title{
+        font-family: $font-family-heading;
         margin-bottom: 0;
     }
 }
@@ -33,6 +34,16 @@
     .item_service{
         &__image{
             height: 120px;
+            min-height: 1px;
+        }
+    }
+}
+
+@media all and (max-width: map-get($grid-breakpoints, 'xxs')){
+    .item_service{
+        &__image{
+            height: 90px;
+            min-height: 1px;
         }
     }
 }
