--- a/src/styles/framework/_heading.scss
+++ b/src/styles/framework/_heading.scss
@@ -38,16 +38,11 @@ h1, h2, h3, h4, h5, h6,
     .h6,h6{font-size: map-get($map: $font-size, $key: md);}
 }
 // < 768px
-@media all and (max-width: map-get($grid-breakpoints, 'sm')){
-    // .h1,h1{font-size: map-get($map: $heading, $key: h4);}
-    // .h2,h2{font-size: map-get($map: $heading, $key: h5);}
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .h1,h1{font-size: map-get($map: $heading, $key: h4);}
+    .h2,h2{font-size: map-get($map: $heading, $key: h5);}
     .h3,h3{font-size: map-get($map: $heading, $key: h6);}
     .h4,h4{font-size: map-get($map: $font-size, $key: lg);}
     .h5,h5{font-size: map-get($map: $font-size, $key: md);}
     .h6,h6{font-size: map-get($map: $font-size, $key: sm);}
-}
-// < 375px
-@media all and (max-width: map-get($grid-breakpoints, 'xxs')){
-    .h1,h1{font-size: map-get($map: $heading, $key: h4);}
-    .h2,h2{font-size: map-get($map: $heading, $key: h5);}
 }
