--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,7 @@
   -ms-flex-align: center;
   align-items: center;
   color: #c1ea1d;
+  padding: 0;
 }
 
 .btn_callback svg {
@@ -55,7 +56,7 @@
   border: 4px solid #c1ea1d;
   color: #c1ea1d;
   text-align: center;
-  padding: 14px 28px;
+  padding: 18px 28px 16px;
 }
 
 .btn_action:hover, .btn_action:focus {
@@ -366,7 +367,6 @@
 }
 
 .item__title {
-  font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
   font-weight: 700;
   line-height: 1.1;
@@ -376,7 +376,7 @@
 .item__title_has-icon {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 34px 1fr;
+  grid-template-columns: 54px 1fr;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -388,7 +388,7 @@
 }
 
 .item__icon {
-  width: 34px;
+  width: 54px;
 }
 
 .item__intro {
@@ -479,11 +479,11 @@
   width: 100%;
   padding: 30px;
   border: 4px solid #ffffff;
-  background-color: #1a1a1a;
+  background-color: #242424;
 }
 
 .item_link:hover, .item_link:focus {
-  background-color: #242424;
+  background-color: #1a1a1a;
   text-decoration: none;
 }
 
@@ -657,6 +657,7 @@
 }
 
 .item_service__title {
+  font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   margin-bottom: 0;
 }
 
@@ -672,6 +673,14 @@
 @media all and (max-width: 576px) {
   .item_service__image {
     height: 120px;
+    min-height: 1px;
+  }
+}
+
+@media all and (max-width: 375px) {
+  .item_service__image {
+    height: 90px;
+    min-height: 1px;
   }
 }
 
@@ -908,6 +917,12 @@
   }
 }
 
+@media all and (max-width: 375px) {
+  .navbar__grid {
+    grid-template-columns: 1fr;
+  }
+}
+
 .navbar_header {
   position: fixed;
   top: 0;
@@ -953,12 +968,38 @@
 
 .navbar_header__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 6px;
+  top: 30px;
+  right: 15px;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
   background: #242424;
-  border-radius: 50%;
+  border: 1px solid #c1ea1d;
+  fill: #c1ea1d;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
   cursor: pointer;
+  z-index: 99;
+}
+
+.navbar_header__close:hover {
+  background: #1a1a1a;
+}
+
+@media all and (max-width: 768px) {
+  .navbar_header__close {
+    height: 34px;
+    width: 34px;
+    padding: 6px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .navbar_header__close {
+    top: 9px;
+    right: 12px;
+  }
 }
 
 .header__logo {
@@ -986,7 +1027,7 @@
   -ms-flex-align: center;
   align-items: center;
   padding: 40px 0;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .header__email {
@@ -1010,14 +1051,21 @@
   height: 50px;
   width: 50px;
   padding: 10px;
-  background: #1a1a1a;
+  background: #242424;
   border: 1px solid #c1ea1d;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
   cursor: pointer;
   z-index: 999;
 }
 
 .header__nav-path {
   fill: #c1ea1d;
+}
+
+.header__nav:hover {
+  background: #1a1a1a;
 }
 
 @media all and (max-width: 768px) {
@@ -1039,7 +1087,7 @@
     transform: translateY(-2px);
   }
   .header__logo-svg {
-    width: 80px;
+    width: 120px;
   }
   .header__nav {
     top: 9px;
@@ -1050,8 +1098,14 @@
   }
 }
 
+@media all and (max-width: 375px) {
+  .header__logo-svg {
+    width: 90px;
+  }
+}
+
 .footer {
-  font-size: 14px;
+  font-size: 12px;
   padding: 60px 0;
 }
 
@@ -1060,6 +1114,16 @@
   max-width: 100%;
   margin-bottom: 10px;
   fill: #ffffff;
+}
+
+.footer__nav {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.footer__nav_portfolio {
+  grid-template-columns: 1fr;
 }
 
 .footer__email {
@@ -1081,13 +1145,56 @@
 .footer__link {
   display: block;
   color: #b8b8b8;
-  line-height: 1.1;
-  margin-bottom: 10px;
+  line-height: 1.4;
+}
+
+@media all and (max-width: 1280px) {
+  .footer__service {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    margin-bottom: 40px;
+  }
+  .footer__info {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    margin-bottom: 40px;
+  }
+  .footer__portfolio {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3;
+  }
 }
 
 @media all and (max-width: 576px) {
   .footer {
     padding: 40px 0;
+  }
+  .footer__info {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3;
+    margin-bottom: 0;
+  }
+  .footer__portfolio {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    margin-bottom: 40px;
+  }
+  .footer__nav {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer__nav_portfolio {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media all and (max-width: 375px) {
+  .footer__nav {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -1146,6 +1253,78 @@
 .content-main__list:before {
   content: '—';
   margin-right: 10px;
+}
+
+@media all and (max-width: 1600px) {
+  .content-main__title {
+    font-size: 60px;
+  }
+  .content-main__title_secondary {
+    font-size: 40px;
+  }
+  .content-main__intro {
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 1280px) {
+  .content-main__title {
+    font-size: 40px;
+  }
+  .content-main__title_secondary {
+    font-size: 32px;
+  }
+  .content-main__subtitle {
+    top: 20px;
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .content-main {
+    padding: 40px 20px;
+  }
+  .content-main__title {
+    font-size: 32px;
+  }
+  .content-main__title_secondary {
+    font-size: 24px;
+  }
+  .content-main__subtitle {
+    left: 20px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .content-main {
+    padding-top: 80px;
+  }
+  .content-main__title {
+    text-indent: 0px;
+  }
+  .content-main__intro {
+    max-width: 100%;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .content-main__title {
+    font-size: 24px;
+  }
+  .content-main__title_secondary {
+    font-size: 18px;
+  }
+}
+
+@media all and (max-width: 375px) {
+  .content-main__title {
+    font-size: 20px;
+  }
+  .content-main__title_secondary {
+    font-size: 18px;
+  }
+  .content-main__list {
+    margin-bottom: 5px;
+  }
 }
 
 .content-compare {
@@ -1217,7 +1396,31 @@
   padding: 40px;
 }
 
+@media all and (max-width: 1024px) {
+  .content-form {
+    padding-right: 80px;
+  }
+}
+
 @media all and (max-width: 768px) {
+  .content-form {
+    padding-right: 60px;
+  }
+  .content-form__form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .content-form__col {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .content-form__col_name {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .content-form__col_phone {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
   .content-form_callback {
     padding: 20px;
   }
@@ -1226,6 +1429,20 @@
 @media all and (max-width: 576px) {
   .content-form {
     padding-top: 40px;
+    padding-right: 40px;
+  }
+  .content-form__form {
+    grid-template-columns: 1fr;
+  }
+  .content-form__col {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .content-form__intro {
+    max-width: 100%;
+  }
+  .content-form__btn {
+    width: 100%;
   }
 }
 
@@ -1242,6 +1459,31 @@
 .service__col_first {
   grid-row-start: 1;
   grid-row-end: 3;
+}
+
+@media all and (max-width: 1280px) {
+  .service_category {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .service {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 768px) {
+  .service__col_first {
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .service {
+    grid-template-columns: 1fr;
+  }
 }
 
 .portfolio {
@@ -1285,14 +1527,21 @@
 }
 
 @media all and (max-width: 1024px) {
+  .portfolio__title {
+    font-size: 16px;
+    padding: 20px 20px 10px;
+  }
+  .portfolio__intro {
+    padding: 0 20px 20px;
+  }
   .portfolio_navbar {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: 768px) {
   .portfolio {
-    display: block;
+    grid-template-columns: 1fr;
   }
 }
 
