--- a/src/blocks/content/content-form.pug
+++ b/src/blocks/content/content-form.pug
@@ -8,9 +8,9 @@ aside.content-form
                     span.text-green .
             p.content-form__intro Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
             form.form.content-form__form
-                    .content-form__col
+                    .content-form__col.content-form__col_name
                         input.input.input--full(type="Email" placeholder="E-mail")
-                    .content-form__col
+                    .content-form__col.content-form__col_phone
                         input.input.input--has-validation.input--full.phone(type="tel" placeholder="Телефон *")
                         //- .form__validation.error_phone.error Укажите корректный номер
                     .content-form__col
@@ -18,7 +18,7 @@ aside.content-form
                     .content-form__col
                         input.input.input--full(type="text" placeholder="Какая услуга интересует?")
                     .content-form__col
-                        button.btn.btn_action(type="submit") Обсудить проект
+                        button.content-form__btn.btn.btn_action(type="submit") Обсудить проект
         .col-4.d-md-none
             <svg class="content-form__animation" id="parent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
                 <path id="path" fill="none" stroke="#3e3e3e" stroke-width="2" stroke-dasharray="10" d="M 25, 250 a 225,225 0 1,0 450,0 a 225,225 0 1,0 -450,0"/>
