--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -15,7 +15,7 @@
         flex-wrap: nowrap;
         align-items: center;
         padding: $spacer 0;
-        font-size: map-get($map: $font-size, $key: sm);
+        font-size: map-get($map: $font-size, $key: xs);
     }
 
     &__email{
@@ -40,18 +40,23 @@
         padding: 10px;
         
         // border-radius: 50%;
-        background: darken($color: $black, $amount: 4);
+        background: $black;
         border: 1px solid $green;
 
+        transition: .4s;
         cursor: pointer;
         z-index: 999;
 
         &-path{
             fill: $green;
         }
+
+        &:hover{
+            background: darken($color: $black, $amount: 4);
+        }
     }
 }
-
+// < 768px
 @media all and (max-width: map-get($grid-breakpoints, 'sm')){
     .header{
         &__nav{
@@ -62,6 +67,7 @@
     }
 
 }
+// < 576px
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .header{
         &__top{
@@ -71,7 +77,7 @@
             margin-right: $spacer/2;
             transform: translateY(-2px);
             &-svg{
-                width: 80px;
+                width: 120px;
             }
         }
         &__nav{
@@ -80,6 +86,16 @@
         }
         &__link{
             display: none;
+        }
+    }
+}
+// < 375px
+@media all and (max-width: map-get($grid-breakpoints, 'xxs')){
+    .header{
+        &__logo{
+            &-svg{
+                width: 90px;
+            }
         }
     }
 }
