--- a/src/blocks/navbar/_navbar.scss
+++ b/src/blocks/navbar/_navbar.scss
@@ -31,6 +31,7 @@
         background-color: $black;
     }
 }
+// < 1280px
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
     .navbar{
         &__grid{
@@ -38,6 +39,7 @@
         }
     }
 }
+// < 1024px
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
     .navbar{
         &__grid{
@@ -45,10 +47,19 @@
         }
     }
 }
+// < 576px
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .navbar{
         &__grid{
             grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+    }
+}
+// < 375px
+@media all and (max-width: map-get($grid-breakpoints, 'xxs')){
+    .navbar{
+        &__grid{
+            grid-template-columns: 1fr;
         }
     }
 }
