--- a/src/blocks/service/_service.scss
+++ b/src/blocks/service/_service.scss
@@ -11,14 +11,34 @@
         }
     }
 }
-
-// @media all and (max-width: map-get($grid-breakpoints, 'md')){
-//     .service{
-//         grid-template-columns: repeat(2, minmax(0, 1fr));
-//     }
-// }
-// @media all and (max-width: map-get($grid-breakpoints, 'xs')){
-//     .service{
-//         display: block;
-//     }
-// }
+// < 1280px
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .service{
+        &_category{
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+    }
+}
+// < 1024px
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .service{
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+// < 768px
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .service{
+        &__col{
+            &_first{
+                grid-row-start: 1;
+                grid-row-end: 2;
+            }
+        }
+    }
+}
+// < 576px
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .service{
+        grid-template-columns: 1fr;
+    }
+}
