--- a/src/styles/framework/_framework.scss
+++ b/src/styles/framework/_framework.scss
@@ -1,5 +1,5 @@
 html,body {
-    font-size: map-get($font-size, 'hd');
+    font-size: map-get($font-size, 'md');
     font-weight: $font-weight-base;
     line-height: $line-height;
     box-sizing: border-box;
@@ -20,6 +20,7 @@ p {
     font-size: 1rem;
     margin-top: 0;
     margin-bottom: map-get($spacers, 2);
+
     &:last-child{
         margin-bottom: 0;
     }
@@ -99,8 +100,8 @@ table{
 .text-underline{text-decoration: underline;}
 
 // Text Sizes
-.text-small,small,.small{font-size: 0.9rem;}
-.text-lead,.lead{font-size: 1.2rem;}
+.text-small,small,.small{font-size: map-get($map: $font-size, $key: xs);}
+.text-lead,.lead{font-size: map-get($map: $font-size, $key: lg); line-height: $line-height-base;}
 
 // Text Positions
 .text{
@@ -163,6 +164,10 @@ table{
 }
 // < 1024px
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
+    html, body{
+        font-size: map-get($font-size, 'sm');
+    }
+    .text-lead,.lead{font-size: map-get($map: $font-size, $key: md);}
     .text-md{
         &-left{text-align: left;}
         &-center{text-align: center;}
